--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <!-- </div> -->
             </div>
         </div>
-        <h5 class="formula">Formula:</h4>
+        <h5 class="formula2">Formula:</h4>
         <div class="formula my-3">
          <p id="formula" class="text-center"></p>
         </div>
